add_subdirectory(Utils)
add_subdirectory(Bogoroditskaya)
add_subdirectory(idoroshenkoPass)
add_subdirectory(Instrumentation)
add_subdirectory(AggressiveInstCombine)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(ArivanovCount)
add_subdirectory(ArivanovLab2)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(ObjCARC)
add_subdirectory(PankratovaPass)
add_subdirectory(Coroutines)
add_subdirectory(CFGuard)
add_subdirectory(Sazanov_Lab1_Pass)
add_subdirectory(Strakhovcounter)
add_subdirectory(DVorobyovCount)
add_subdirectory(Selivanovskaya_lab1)
add_subdirectory(aanoskovCounter)
add_subdirectory(IlyinPass)
add_subdirectory(pazamelin)
add_subdirectory(AKomyaginCount)
add_subdirectory(MelnikovLab1Pass)
add_subdirectory(OksanaKozlova)
add_subdirectory(MoiseevPass)
add_subdirectory(AvmusatovCount)
add_subdirectory(KovakimyCount)
add_subdirectory(PyanzinPass1)
add_subdirectory(VolokhPass)
add_subdirectory(BaturinaPass)
add_subdirectory(VokhmyaninaCounter)
add_subdirectory(CountPass)
add_subdirectory(KatyaMalyshevaLab1Pass)
add_subdirectory(KatyaMalyshevaLab2Pass)
add_subdirectory(CounterPass)
